--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+/* Bootstrap core functions */
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
+/* Bootstrap core styles */
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/tables";
+
+html, body, app-root {
+  color: #444444;
+}
+
+h1 {
+  margin: 20px auto;
+  font-size: 1.6em;
+  font-weight: 500;
+  padding-bottom: 0;
+  text-align: center;
+  font-family: Montserrat, sans-serif;
+}
+
+h2 {
+  font-size: 1.4em;
+  font-weight: 400;
+  margin: 20px auto;
+  padding-bottom: 0;
+  text-align: center;
+  font-family: Montserrat, sans-serif;
+}
